List of all skins - fix follow share wrap, fix select.

--- a/src/scss/_components/list/_browse.scss
+++ b/src/scss/_components/list/_browse.scss
@@ -7,6 +7,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
+  @include adaptive(767) {
+    overflow: hidden;
+  }
 
   &__bg,
   &__triangle {
